@startuml Class Diagram
title Plateforme MYSDF Formations - Diagramme de classes
skinparam classAttributeIconSize 0

' ====== Enums ======
enum OrderStatus {
  DRAFT
  CONFIRMED
  CANCELLED
}

' ====== Entities ======
class Training {
  +id: int
  +name: String
  +description: String
  +durationDays: int
  +price: BigDecimal
  +onsite: boolean
}

class UserAccount {
  +id: int
  +login: String
  +passwordHash: String
}

class Client {
  +id: int
  +firstName: String
  +lastName: String
  +email: String
  +address: String
  +phone: String
}

class Cart {
  +id: int
  +userId: int
  +createdAt: LocalDateTime
  +items: List<CartItem>
  +getTotal(): BigDecimal
}

class CartItem {
  +id: int
  +cartId: int
  +training: Training
  +quantity: int
  +unitPrice: BigDecimal
  +getLineTotal(): BigDecimal
}

class Order {
  +id: int
  +userId: int
  +client: Client
  +createdAt: LocalDateTime
  +status: OrderStatus
  +total: BigDecimal
  +lines: List<OrderLine>
  +computeTotalFromLines(): BigDecimal
}

class OrderLine {
  +id: int
  +orderId: int
  +training: Training
  +quantity: int
  +unitPrice: BigDecimal
  +getLineTotal(): BigDecimal
}

' ====== Associations ======
' A logged-in user can have an active cart
UserAccount "1" o-- "0..1" Cart : owns

Cart "1" o-- "0..*" CartItem : contains
CartItem "*" --> "1" Training : training

' Orders : a user can place many orders
UserAccount "1" --> "0..*" Order : places

' Each order is for exactly one client
Client "1" <-- "0..*" Order : for

Order "1" o-- "1..*" OrderLine : lines
OrderLine "*" --> "1" Training : training

' ====== Notes ======
note right of UserAccount
Création utilisateur :
login + password hash.
end note

note right of Training
Catalogue des formations :
prix, durée, modalité (onsite).
end note

note right of Order
Une commande est associée à 1 client.
Un utilisateur peut faire plusieurs commandes
pour des clients différents.
end note

note bottom of Cart
Panier : ajout/retrait de formations.
Passage en commande possible quand connecté.
end note

@enduml
